[project]
name = "sqlalchemy-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Patricia Kapla",email = "patriciakapla@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "psycopg-binary (>=3.3.4,<4.0.0)",
    "psycopg (>=3.3.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "typos (>=1.47.2,<2.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest]
pythonpath = ['.']
addopts = ['-p', 'no:warnings', '--cov=sqlalchemy_tests', '--cov-context=test']

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'python sqlalchemy_tests/test01.py'
pre_test = 'task lint'
test = 'pytest -s -x -vv'
post_test = 'coverage html --show-contexts'